force-app/main/default/objects/Article_View_Statistic__c/Article_View_Statistic__c.object-meta.xml
<CustomObject>
    <label>Article View Statistic</label>
    <nameField>
        <displayFormat>AVS-{000000000}</displayFormat>
        <label>Article View Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article View Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>