force-app/main/default/objects/Article_View_Statistic__c/fields/uniqueId__c.field-meta.xml
<CustomField>
    <fullName>uniqueId__c</fullName>
    <externalId>true</externalId>
    <label>uniqueId</label>
    <length>37</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>