force-app/main/default/objects/Article_View_Statistic__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <defaultValue>0</defaultValue>
    <label>View</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>