force-app/main/default/objects/Article_View_Statistic__c/fields/Viewed__c.field-meta.xml
<CustomField>
    <fullName>Viewed__c</fullName>
    <label>Viewed</label>
    <type>DateTime</type>
</CustomField>